# Pydice3d

./: .gitignore  ARCHITECTURE.md  README.md  asset_loader.py  atlas_debug.py  collision.py  dice.py  dice_mesh.py  dice_state.py  dicerender.txt  fakedice.txt  geometrics.py  glarena.py  main.py  matrices.py  notes.md  notes.txt  physics.py  pyproject.toml  render_data.py  renderer.py  roll_result.py  shaders.py  sound.py  spawner.py
assets/: notes.txt
debug/: atlas_debug.py  audio_debug.py  debug_wire.py
deprecated/: README.md  asset_loader.py  dice_reader.py  geometrics.py  glarena.py  main.py  matrices.py  notes.txt  physics2.py  shaders.py
exemples/gtk/: README.md  debug_wire.py  glarena.py  main.py
experiments/: obj_loader.py
originals/: dicereader.py  glarena.py  main.py  sound.py
references/: complet_window.py  cubo.mtl  cubo.urdf  dices.py  face.py
src/pydice3d/: audio.py  camera.py  collision_wire.py  dice.py  dice_mesh.py  dice_state.py  math_utils.py  physics.py  render_data.py  renderer.py  results.py  roll_result.py  scene.py  shaders.py  simulation.py  sound.py  spawner.py
src/pydice3d/assets/atlas/: atlas-old.json  atlas.json
tools/: audio_analiyzer.py  audio_gen.py  convert_npy.py
